Steamcmd Healthchceck